$Id: History,v 1.2 1999-02-07 17:24:13 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/modeling
---------------------------------------

vis-01-00-05  7th February 1999  John Allison
- Added list facility to G4PhysicalVolumeSearchScene.
- Added virtual functions AddThis (const G4Polycone and G4Polyhedra to
  G4BoundingSphereScene and G4PhysicalVolumeSearchScene.

vis-00-04-01  25th November 1998  John Allison.
- Added const G4VisAttributes* fpDefaultVisAttributes and access
  functions to G4ModelingParameters.
- Reverted to default assignment operator and copy constructor for
  G4ModelingParameters.
- G4PhysicalVolumeModel can now handle invisible daughters.

31st August 1998  John Allison
- Added G4VModel::Validate() and in subclasses.

vis-00-02-05  27th August 1998  John Allison
- Added G4HitsModel and G4TrajectoriesModel.

vis-00-02-04  22nd August 1998  John Allison
- Made G4Transform3D fTransform a member of G4VModel (instead of pointer).
- Reversed order of parameters in G4VModel constructor.
- Much bug fixing.

vis-00-06-06  11th June 1998  John Allison
- G4PhysicalVolumeModel handles parametrised solids and materials.

vis-00-06-04  10th June 1998  John Allison