@@ -5,12 +5,19 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4HitsModel.hh,v 1.2 1999-01-11 00:48:43 allison Exp $
+// $Id: G4HitsModel.hh,v 1.3 1999-11-25 14:18:45 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
 // John Allison  26th August 1998.
+//
+// Class Description:
+//
 // Model which knows how to draw GEANT4 hits.
+//
+// For access to base class information, e.g., modeling parameters,
+// use GetModelingParameters() inherited from G4VModel.  See Class
+// Description of the base class G4VModel.
 
 #ifndef G4HITSMODEL_HH
 #define G4HITSMODEL_HH
@@ -19,7 +26,7 @@
 
 class G4HitsModel: public G4VModel {
 
-public:
+public: // With description
 
   G4HitsModel ();
    
@@ -28,11 +35,11 @@ public:
   virtual void DescribeYourselfTo (G4VGraphicsScene&);
   // The main task of a model is to describe itself to the scene.
 
-  virtual G4String GetCurrentTag () const;
-  // A tag which depends on the current state of the model.
-
   virtual G4String GetCurrentDescription () const;
   // A description which depends on the current state of the model.
+
+  virtual G4String GetCurrentTag () const;
+  // A tag which depends on the current state of the model.
 
   virtual G4bool Validate ();
   // Validate, but allow internal changes (hence non-const function).
